---
title: Neo4j ER Diagram
---
erDiagram
    %% VULNERABILITY {
    %%     string id PK
    %%     string cwe
    %%     string cve
    %%     string cvss
    %%     string severity
    %% }

    VERSION {
        string id PK
        string full_name
        string name
        string type
    }

    COMPONENT {
        string id PK
        string full_name
        string name
        string type
    }

    COMMIT {
        string id PK
        time date
        string full_name
        string name
        string content
    }

    WORKFLOW {
        string id PK
        string full_name
        string name
        string path
    }

    REPOSITORY {
        string id PK
        string full_name
        string name
        string url
    }

    VENDOR {
        string id PK
        string name
    }

    %% COMMIT }|--o{ VULNERABILITY : HAS
    VERSION }|--|{ COMMIT : PUSHES
    COMPONENT ||--|{ VERSION : DEPLOYS
    WORKFLOW ||--|{ COMMIT : PUSHES
    REPOSITORY ||--|{ WORKFLOW : CONTAINS
    VENDOR ||--o{ REPOSITORY : OWNS
    VENDOR ||--o{ COMPONENT : PUBLISHES

    USES {
        string times
        string version
        string type
    }

    CHANGED_TO {
        string diff
        int delta
    }

    "WORKFLOW COMMIT" }o--|| USES : ""
    USES ||--o{ "WORKFLOW/VERSION COMMIT or VERSION" : ""
    "WORKFLOW COMMIT 1" |o--|| CHANGED_TO : ""
    CHANGED_TO ||--o| "WORKFLOW COMMIT 2" : ""
